--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "coverage>=7.10.6",
     "email-validator>=2.3.0",
     "fastapi[standard]>=0.116.1",
 ]
